# rubric-gates

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
benchmarks/: README.md
benchmarks/cohorts/: aki.sql  sepsis.sql
examples/artifacts/: sample_artifact.json  sample_context.json
examples/certificates/: example_certificate.json
experiments/: ec2_config.py  generate_figures.py  run_benchmarks.py  run_ec2_benchmarks.sh  run_real_benchmarks.py
paper/: CLAIMS_AND_SCOPE_LOCK.md  MANUSCRIPT_OUTLINE.md
paper/latex/: main.tex  references.bib
paper/literature/: README.md
results/: EXPERIMENT_RESULTS.md
rubrics/tier1/: constitution.yaml
rubrics/tier2/: clinical_invariants.yaml
rubrics/tier3/: cohort_construction.yaml
schemas/: certificate.schema.json  rubric.schema.json  run_manifest.schema.json
src/rubric_gates/: __init__.py  cli.py  evaluator.py  harness.py  rubric_loader.py  verify.py
src/rubric_gates/adapters/: __init__.py  base.py  eicu.py  mimic_iv.py
src/rubric_gates/datasets/: __init__.py  downloader.py  manifest.py  registry.py
tests/: __init__.py  test_evaluator.py  test_harness.py
